package server;

message register_node_req {
    required uint32 server_id = 1;
	required string key       = 2;
}

message register_node_rsp {
    required uint32 ret = 1;
}

message node_agent_req {
	required uint32 role_id         = 1;
	required uint32 scene_server_id = 2;
}

message node_agent_rsp {
	required uint32 role_id  = 1;
	required uint32 agent_id = 2;
}

message node_role_req {
	required uint32 role_id   = 1;
	required uint32 agent_id  = 2;
	required uint32 client_id = 3;
}

message node_role_rsp {
	required uint32 role_id = 1;
}

message forward_msg {
	enum target {
		client = 1;
		server = 2;
	}

	required uint32 id   = 1;
	required target type = 2;
	required string data = 3;
}
